--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Ashokprof.GitHub.io by ashokprof</title>
+    <title>Welcome by ashokprof</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Ashokprof.GitHub.io</h1>
-        <h2></h2>
+        <h1>Welcome</h1>
+        <h2>First</h2>
 
         <section id="downloads">
           <a href="https://github.com/ashokprof" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
