--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>Welcome</h1>
-        <h2>First</h2>
+        <h1>Ashokkumar Subramanian</h1>
+        
 
         <section id="downloads">
           <a href="https://github.com/ashokprof" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
