--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 					<div  class="nav-icons">
 					
-						<a href="/" img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSodqG2dqJWAElxn9ryPM5x9JhbMW_1NQUKtiONi3h7EYHuYltjTEn7YFs" title="Home - Ashokkumar Subramanian"></a>
+						<a href="/" title="Home - Ashokkumar Subramanian"><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSodqG2dqJWAElxn9ryPM5x9JhbMW_1NQUKtiONi3h7EYHuYltjTEn7YFs"></a>
 						<a href="/posts.html" class="all-posts-icon" title="All Posts"></a>
 						<a href="/about.html" class="round-about-icon" title="About Ashokkumar Subramanian"></a>
 						
