--- a/posts.html
+++ b/posts.html
@@ -78,7 +78,7 @@
 						<a href="/" class="round-home-icon" title="Home - Ashokkumar Subramanian">Home</a>
 						<a href="/posts.html" class="all-posts-icon" title="All Posts">Posts</a>
 						<a href="/about.html" class="round-about-icon" title="About Ashokkumar Subramanian">About Me</a>
-						
+						<a href="https://plus.google.com/116545511063360353852" class="round-about-icon" title="About Ashokkumar Subramanian">gPlus</a>
 
 						<a href="https://github.com/ashokprof" class="round-github-icon" title="Github - Ashok">MyGitHub</a> 	
 
