--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 						<a href="/about.html" class="round-about-icon" title="About Ashokkumar Subramanian">About Me</a>
 						
 
-						<a href="https://plus.google.com/+MaheshSubramaniya?rel=author" rel="author" class="round-gplus-icon" title="+MaheshSubramaniya"></a> 	
+						<a href="https://plus.google.com/116545511063360353852" rel="author" class="round-gplus-icon" title="+MaheshSubramaniya"></a> 	
 
 						<a href="https://github.com/ashokprof" class="round-github-icon" title="Github - Ashok">MyGitHub</a> 	
 
