--- a/index.html
+++ b/index.html
@@ -63,12 +63,9 @@
 					
 						<a href="/" title="Home - Ashokkumar Subramanian">Home</a>
 						<a href="/posts.html" title="All Posts">Posts</a>
-						<a href="/about.html" class="round-about-icon" title="About Ashokkumar Subramanian">About Me</a>
-						
-
-						<a href="https://plus.google.com/116545511063360353852" rel="publisher"></a> 	
-
-						<a href="https://github.com/ashokprof" class="round-github-icon" title="Github - Ashok"></a> 	
+						<a href="/about.html" title="About Ashokkumar Subramanian">About Me</a>
+						<a href="https://plus.google.com/116545511063360353852">gPlus</a> 	
+						<a href="https://github.com/ashokprof" title="Github - Ashok">MyGitHub</a> 	
 
 						<!-- <a href="http://500px.com/maheshsubramaniya" class="round-photos-icon" title="Photos"></a> 	-->
 
