--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 					<div  class="nav-icons">
 					
 						<a href="/" title="Home - Ashokkumar Subramanian">Home</a>
-						<a href="/posts.html" title="All Posts">Posts</a>
-						<a href="/about.html" title="About Ashokkumar Subramanian">About Me</a>
-						<a href="https://plus.google.com/116545511063360353852">gPlus</a> 	
-						<a href="https://github.com/ashokprof" title="Github - Ashok">MyGitHub</a> 	
+						<a href="/posts.html" title="All Posts">	| 	Posts</a>
+						<a href="/about.html" title="About Ashokkumar Subramanian">	|	About Me</a>
+						<a href="https://plus.google.com/116545511063360353852">|	gPlus</a> 	
+						<a href="https://github.com/ashokprof" title="Github - Ashok">	|	MyGitHub</a> 	
 
 						<!-- <a href="http://500px.com/maheshsubramaniya" class="round-photos-icon" title="Photos"></a> 	-->
 
