--- a/about.html
+++ b/about.html
@@ -75,14 +75,11 @@
 
 					<div  class="nav-icons">
 					
-						<a href="/" class="round-home-icon" title="Home - Ashokkumar Subramanian">Home</a>
-						<a href="/posts.html" class="all-posts-icon" title="All Posts">Posts</a>
-						<a href="/about.html" class="round-about-icon" title="About Ashokkumar Subramanian">About Me</a>
-						
-
-						<a href="https://plus.google.com/116545511063360353852" rel="author" class="round-gplus-icon" title="+MaheshSubramaniya"></a> 	
-
-						<a href="https://github.com/ashokprof" class="round-github-icon" title="Github - Ashok">MyGitHub</a> 	
+						<a href="/" title="Home - Ashokkumar Subramanian">Home</a>
+						<a href="/posts.html" title="All Posts">	| 	Posts</a>
+						<a href="/about.html" title="About Ashokkumar Subramanian">	|	About Me</a>
+						<a href="https://plus.google.com/116545511063360353852">|	gPlus</a> 	
+						<a href="https://github.com/ashokprof" title="Github - Ashok">	|	MyGitHub</a> 	
 
 						<!-- <a href="food.html" class="round-cooking-icon" title="Cooking"></a> 	 -->
 
