--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
 
 <p>Follow me at <a href="http://twitter.com/msubramaniya" rel="me" itemprop="url">@msubramaniya</a>, 
 <a href="https://plus.google.com/+MaheshSubramaniya?rel=author" rel="author">+MaheshSubramaniya</a>,
-and know more about me at <a href="http://www.linkedin.com/in/maheshsubramaniya" rel="me">LinkedIn</a></p>
+and know more about me at <a href="www.linkedin.com/in/ashokkumarsubramanian" rel="me">LinkedIn</a></p>
 
 <h3 id="web-apps">Web Apps</h3>
 
