--- a/about.html
+++ b/about.html
@@ -142,9 +142,8 @@
 
 <p>Well, to talk about this blog is a place where I register my thoughts and views on Software, Programming and Enterprise software applications. Hope you will find a quite few interesting articles and views of Software, programming &amp; Enterprise Architecture. This blog was basically started during my college days, with a different name. But I decided to go with my name so that it seems bit logical to me. I’ve migrated this blog on a whole range of blog platforms starting with <a href="http://en.wikipedia.org/wiki/Blogger_(service)">Blogger</a>, <a href="http://maheshexp.wordpress.com/">Wordpress hosted blog</a> now it runs on <a href="/article/trying-git-hosted-blog-jekyll.html">Jekyll powered by github</a>.</p>
 
-<p>Follow me at <a href="http://twitter.com/msubramaniya" rel="me" itemprop="url">@msubramaniya</a>, 
-<a href="https://plus.google.com/+MaheshSubramaniya?rel=author" rel="author">+MaheshSubramaniya</a>,
-and know more about me at <a href="www.linkedin.com/in/ashokkumarsubramanian" rel="me">LinkedIn</a></p>
+<a href="https://plus.google.com/116545511063360353852" rel="author">+AshokkumarSubramanian</a>,
+and know more about me at <a href="www.linkedin.com/in/ashokkumarsubramanian" rel="me">LinkedInAshok</a></p>
 
 <h3 id="web-apps">Web Apps</h3>
 
