--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="large-1 columns">
 					
 					<a href="/" data-original-title="Ashok Subramanian">
-					        <img src="https://lh3.googleusercontent.com/-uPfoSBLFR7I/VM21rOJ1gcI/AAAAAAAAAgs/xqjS3PpDyec/w140-h140-p/d3e0c568-cdbc-4f5d-b457-96af3c08574c" alt="Ashok Subramanian" class="avatar size73">
+					        <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/000/256/253/051cf01.jpg" alt="Ashok Subramanian" class="avatar size73">
 					</a>
 				</div>
 
