--- a/index.html
+++ b/index.html
@@ -49,13 +49,12 @@
 			<div class="large-offset-1 columns">
 				<div class="large-1 columns">
 					
-				
+					<a href="/"  class="twitter-profile-icon" data-original-title="Ashok Subramanian">
+					        <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/000/256/253/051cf01.jpg" alt="Ashok Subramanian" class="avatar size73">
+					</a>
 				</div>
 
 				<div class="large-11 columns site-title">
-						<a href="/" data-original-title="Ashok Subramanian">
-					        <img src="https://media.licdn.com/mpr/mpr/shrink_200_200/p/7/000/256/253/051cf01.jpg" alt="Ashok Subramanian" class="avatar size73">
-					</a>
 					<h1>
 						Ashokkumar Subramanian
 					</h1>
