--- a/Understanding_how_jars_loaded.html
+++ b/Understanding_how_jars_loaded.html
@@ -280,7 +280,7 @@ total 0
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46244950-1', 'maheshsubramaniya.com');
+  ga('create', 'UA-46244950-1', 'ashokkumarsubramanian.com');
   ga('send', 'pageview');
 
 </script>
