--- a/MutualCertificateAuthentication.html
+++ b/MutualCertificateAuthentication.html
@@ -307,7 +307,7 @@ ul
 			
 		</div>
 	</section>
-
+<center>
 	<div class=WordSection1>
 
 <p class=MsoListParagraph><span style='font-size:24.0pt;line-height:115%'><a
@@ -692,7 +692,7 @@ style='font-size:10.5pt;font-family:"Arial","sans-serif";color:#333333'>&nbsp;</
 <p class=MsoNormal>&nbsp;</p>
 
 </div>
-
+</center>
 	<footer id="footer">
 		<div class="center" style="text-align:center;">
 			
