--- a/MutualCertificateAuthentication.html
+++ b/MutualCertificateAuthentication.html
@@ -307,8 +307,11 @@ ul
 			
 		</div>
 	</section>
+<section id="content">
 
-	<div class=WordSection1>
+		<div class="row">
+			<div class="columns" data-swiftype-index='true'>
+				<div id="wrapper">
 
 <p class=MsoListParagraph><span style='font-size:24.0pt;line-height:115%'><a
 href="https://visawiki/display/RAR/Mutual+Certificate+Authentication"><span
@@ -692,7 +695,12 @@ style='font-size:10.5pt;font-family:"Arial","sans-serif";color:#333333'>&nbsp;</
 <p class=MsoNormal>&nbsp;</p>
 
 </div>
+</div>
 
+			</div>
+		</div>
+
+	</section>
 	<footer id="footer">
 		<div class="center" style="text-align:center;">
 			
