--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		      <!--<li><a href="http://500px.com/maheshsubramaniya" title="Photography">Photography</a></li> -->
 		      <!-- <li><a href="/food.html" title="Food &amp; Cooking">Food &amp; Cooking</a></li> -->
 		      <li><a href="/tamil.html" title="தமிழ்">தமிழ்</a></li>
-		      <li><a href="/contact.html" title="Contact">Contact Me</a></li>
+		      <li><a href="/Contact.html" title="Contact">Contact Me</a></li>
 		    </ul>
 		    <small>© Ashokkumar Subramanian - 2004 to today</small>
 		  </div>
